[metadata]
name = FastMQ
version = 0.0.1
author = Manuel Stingl [LaVita GmbH]
author_email = info@lavita.de
description = AMQP/MQTT implementation with automatic documentation
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-2.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
url = https://github.com/LaVita-GmbH/FastMQ

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    pydantic >= 1.7.3
    kombu >= 5.0.2
